--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,11 +1,219 @@
-# Hello bookdown 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE, results = "asis", message = FALSE, warning = FALSE)
+```
 
-All chapters start with a first-level heading followed by your chapter title, like the line above. There should be only one first-level heading (`#`) per .Rmd file.
+```{r}
+library(checkdown)
+```
 
-## A section
+# Введение
 
-All chapter sections start with a second-level (`##`) or higher heading followed by your section title, like the sections above and below here. You can have as many as you want within a chapter.
+Знакомство с древнегреческим языком можно начать с небольшого [видео](https://youtu.be/WxeLgEn0jiw?si=6EVFI3kmaBPkVz4_). Его сделали в 2020 г. студенты ВШЭ Сафия Курамшина и Влад Клещев специально для проекта Antibarbari. После просмотра -- ответьте на вопросы.
 
-### An unnumbered section {-}
+</br>
 
-Chapters and sections are numbered by default. To un-number a heading, add a `{.unnumbered}` or the shorter `{-}` at the end of the heading, like in this section.
+::: {.ask .question}
+**Вопрос 1**. Линейное письмо Б использовалось для записи текстов на древнегреческом языке.
+:::
+
+```{r}
+check_question(answer = "TRUE", 
+               type = "select",
+               button_label = "Проверить",
+               options = c("TRUE", "FALSE", "памагитя"),
+               right = " καλῶς λέγεις 🤩",
+               wrong = " οὐδαμῶς 🙁")
+```
+
+</br>
+
+![*Линейное письмо Б.*](https://mathweb.ucsd.edu/~crypto/Projects/ElizabethSmit/linearb_chart.gif)
+
+</br>
+
+::: {.ask .question}
+**Вопрос 2**. После Гомера на гомеровском диалекте никто не писал.
+:::
+
+```{r}
+check_question(answer = "FALSE", 
+               type = "select",
+               button_label = "Проверить",
+               options = c("TRUE", "FALSE"),
+               right = " καλῶς λέγεις 🤩",
+               wrong = " οὐδαμῶς 🙁")
+```
+
+```{r}
+check_hint("_Все эпические поэмы сочинялись на гомеровском диалекте._", 
+           hint_title = "Показать подсказку",
+           type = "onclick")
+```
+
+</br>
+
+::: {.ask .question}
+**Вопрос 3**. Распространение аттического диалекта ограничено географически пределами Аттики, а хронологически -- "золотым веком" Перикла.
+:::
+
+```{r}
+check_question(answer = "FALSE", 
+               type = "select",
+               button_label = "Проверить",
+               options = c("TRUE", "FALSE"),
+               right = " καλῶς λέγεις 🤩",
+               wrong = " οὐδαμῶς 🙁")
+```
+
+Карта [по ссылке](http://www.emersonkent.com/images/ancient_greek_dialects.jpg).
+
+::: {.ask .question}
+**Вопрос 4**. Тот, кто изучал аттический диалект, не сможет читать Новый Завет, написанный на койне.
+:::
+
+```{r}
+check_question(answer = "FALSE", 
+               type = "select",
+               button_label = "Проверить",
+               options = c("TRUE", "FALSE"),
+               right = " καλῶς λέγεις 🤩",
+               wrong = " οὐδαμῶς 🙁")
+```
+
+</br>
+
+::: {.ask .question}
+**Вопрос 4**. Отметьте автора, писавшего на эолийском диалекте.
+:::
+
+</br>
+
+```{r}
+check_question(answer = 1, 
+               type = "radio",
+               options = insert_images(c("https://m.media-amazon.com/images/I/51dX+CnPzRL._SY346_.jpg", 
+                "https://m.media-amazon.com/images/I/613adQSZYGL._SY346_.jpg", 
+                "https://m.media-amazon.com/images/I/51AL-C+FpeL._SY346_.jpg", 
+                "https://m.media-amazon.com/images/I/51KwdkDXjJL._SY346_.jpg"), image_width = 100),
+               alignment = "horizontal",
+               button_label = "Проверить",
+               right = " καλῶς λέγεις 🤩",
+               wrong = " οὐδαμῶς 🙁")
+```
+
+</br>
+
+```{r}
+check_hint("_Подробнее об эолийском диалекте вы можете узнать из [комментария к фрагментам Сапфо](http://antibarbari.ru/2021/06/05/sappho/), опубликованного на сайте http://antibarbari.ru/._", 
+           hint_title = "Нажмите, чтобы увидеть подсказку")
+```
+
+</br>
+
+::: {.ask .question}
+**Вопрос 5**. Что такое Септуагинта?
+:::
+
+```{r}
+check_question(answer = "перевод Ветхого Завета на греческий", 
+               type = "radio",
+               button_label = "Проверить",
+               options = c("гебдомада, умноженная на декаду", "перевод Нового Завета на латынь", "перевод Нового Завета на греческий", "перевод Ветхого Завета на греческий", "перевод Ветхого Завета на латынь"),
+               right = " καλῶς λέγεις 🤩",
+               wrong = " οὐδαμῶς 🙁" )
+```
+
+</br>
+
+::: {.ask .question}
+**Вопрос 6**. Какое из этих сочинений написано НЕ по-гречески?
+:::
+
+</br>
+
+```{r}
+check_question(answer = 3, 
+               type = "radio",
+               options = insert_images(c("https://m.media-amazon.com/images/I/51tMHcFrKvL.jpg", 
+                "https://m.media-amazon.com/images/I/41df0bx9NQL._SY346_.jpg", 
+                "https://m.media-amazon.com/images/I/41LZdU-poaL._SY346_.jpg", 
+                "https://m.media-amazon.com/images/I/41fLD43dIcL.jpg"), image_width = 100),
+               alignment = "horizontal",
+               button_label = "Проверить",
+               right = " καλῶς λέγεις 🤩",
+               wrong = " οὐδαμῶς 🙁")
+```
+
+</br>
+
+::: {.ask .question}
+**Вопрос 7**. Расположите авторов в хронологическом порядке.
+:::
+
+</br>
+
+```{r}
+check_question(answer = c("Парменид", "Хрисипп", "апостол Павел", "Плутарх", "Порфирий"),
+               type= "in_order",
+               button_label = "Проверить",
+               right = " καλῶς λέγεις 🤩",
+               wrong = " οὐδαμῶς 🙁")
+```
+
+</br>
+
+::: {.ask .question}
+**Вопрос 8**. Древнегреческий алфавит (α, β, γ...) похож на латинский (a, b, c...) и на русский (а, б, в...). Почему?
+:::
+
+</br>
+
+```{r}
+check_question(answer = "и кириллица, и латиница возникли на основе греческого письма",
+  options = c("и кириллица, и латиница возникли на основе греческого письма",
+              "кириллица создана на основе латиницы, а латиница на основе греческого письма",
+              "этруски -- эт русские! а латиница списана с этрусского алфавита",
+              "все три алфавита заимствованы у древних финикийцев"),
+  type = "radio",
+  random_answer_order = TRUE,
+  button_label = "Проверить",
+  right = " καλῶς λέγεις 🤩",
+  wrong = " οὐδαμῶς 🙁")
+```
+
+</br>
+
+![*Этрусский алфавит.*](https://upload.wikimedia.org/wikipedia/commons/6/6d/Etrusc_alphabeth.png)
+
+</br>
+
+:::{.ask .question}
+**Вопрос 9**. Кто из этих европейских философов не знал древнегреческого языка и не обращался к нему в своих работах?
+:::
+
+</br>
+
+```{r}
+check_question(answer = "нет правильного ответа",
+               options = c("Джон Локк", 
+                "Фридрих Ницше", 
+                "Мартин Хайдеггер", 
+                "Гилберт Райл",
+                "нет правильного ответа"),
+               type = "checkbox",
+               button_label = "Проверить",
+               right = " καλῶς λέγεις 🤩",
+               wrong = " οὐδαμῶς 🙁")
+
+```
+
+</br>
+
+:::{.ask .question}
+**Вопрос 10.** Перед вами -- фотография папируса IV в. до н.э. Что вы можете сказать о древнегреческом письме, глядя на этот документ? 
+:::
+
+</br>
+
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Timotheus_of_Miletus%2C_Persians%2C_Papyrus_9875.jpg/1600px-Timotheus_of_Miletus%2C_Persians%2C_Papyrus_9875.jpg"  width=120%>
+
