--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -6,7 +6,7 @@ knitr::opts_chunk$set(echo = FALSE, results = "asis", message = FALSE, warning =
 library(checkdown)
 ```
 
-# Введение
+# Kephalaion 1
 
 Знакомство с древнегреческим языком можно начать с небольшого [видео](https://youtu.be/WxeLgEn0jiw?si=6EVFI3kmaBPkVz4_). Его сделали в 2020 г. студенты ВШЭ Сафия Курамшина и Влад Клещев специально для проекта Antibarbari. После просмотра -- ответьте на вопросы.
 
