--- a/02-lesson-g.Rmd
+++ b/02-lesson-g.Rmd
@@ -210,9 +210,11 @@ ou3 <- check_question(answer = "οὐχ",
 4. `r neg4`
 
 
-**(1)** ὄλβον, πόνον δὲ φέρει ὁ βίος. ἀλλὰ τοὺς πόνους **(2)** πρέπει φεύγειν. εἰ τοὺς πόνους πολλάκις φέρεις, ἔχε τοὺς φιλοὺς. **(3)** ἕνα φίλον, ἀλλὰ πολλοὺς φίλους ἔχειν πρέπει· οἱ γὰρ φίλοι μανθάνουσι καὶ παιδεύουσιν. 
+**(1)** ὄλβον, πόνον δὲ φέρει ὁ βίος. ἀλλὰ τοὺς πόνους **(2)** πρέπει φεύγεισιν. 
 
 1. `r ou1`
 2. `r ou2`
-3. `r ou3`
 
+**(3)** ἕνα^[acc. sg. εἷς «один»] φίλον, ἀλλὰ πολλοὺς φίλους ἔχειν πρέπει· οἱ γὰρ φίλοι μανθάνουσι καὶ παιδεύουσιν.
+
+3. `r ou3`
