--- a/03_lesson_g.Rmd
+++ b/03_lesson_g.Rmd
@@ -1,94 +1,128 @@
 #  Геракл, друг земледельцев
 
-#### Ответьте на вопросы к тексту, выбрав все правильные варианты:
+**Ответьте на вопросы к тексту**.
 
-1) Πόσος ἦν ὁ ἀριθμὸς ὁ τῶν Ἑλληνικῶν θεῶν;
+</br>
+1. Πόσος ἦν ὁ ἀριθμὸς ὁ τῶν Ἑλληνικῶν θεῶν;
 ```{r}
-check_question(c("οὐκ ὀλίγος"), options = c("οὐκ ὀλίγος", "ὀλίγος", "μικρός", "δέκα", "ἀδύνατόν ἐστι ταῦτα ἰδεῖν"), type = "radio", random_answer_order = TRUE)
-```
-\
-2) Διὰ τί οἱ γεωργοὶ ἐθεράπευον τοὺς θεοὺς;
-```{r}
-check_question(c("διότι οἱ θεοὶ τοὺς ἀγροὺς ἐφύλαττον"), options = c("διότι ἀμαθεῖς ἦσαν", "διότι οἱ θεοὶ τοὺς ἀγροὺς ἐφύλαττον", "διότι ἤθελον ταῦτα ποιεῖν",  "διότι εὐσεβεῖς ἦσαν"), type = "radio", random_answer_order = TRUE)
-```
-\
-3) Τίς ἦν ὁ Ἡρακλῆς;
-```{r}
-check_question(c("ὁ τοῦ Διὸς υἱός", "ὁ τῶν γεωργῶν φίλος"), options = c("ὁ τοῦ Διὸς υἱός", "ὁ τῶν γεωργῶν φίλος", "ἀνήρ τις", "οὖτις", "κάπρος μέγας"), type = "checkbox", random_answer_order = TRUE)
-```
-\
-4) Διὰ τί Ζεὺς ἄγει τὸν υἱὸν εἰς τὸν οὐρανόν;
-```{r}
-check_question(c("διότι πολλούς πόνους ἔπασχεν ὁ Ἡρακλῆς"), options = c("διότι φιλεῖ τὸν υἱόν", "διὸτι ἐθέλει κολάζειν τὸν υἱόν", "διότι κάμνει μέγα ὁ Ἡρακλῆς", "διότι περιεργάζεται ὁ Ἡρακλῆς καὶ διαφθείρει τοὺς νέους", "διότι πολλούς πόνους ἔπασχεν ὁ Ἡρακλῆς"), type = "checkbox", random_answer_order = TRUE)
+check_question(c("οὐκ ὀλίγος"), options = c("οὐκ ὀλίγος", "ὀλίγος", "μικρός", "μακρός"), type = "radio", random_answer_order = TRUE, button_label = "ἐπανορθοῦν",  right = "καλῶς 😊", wrong = "οὐδαμῶς 😕")
 ```
 
-#### Замените предложение с глаголом ἔχω (имею) на конструкцию с _dativus possessivus_ и наоборот:
+</br>
+2. Διὰ τί οἱ γεωργοὶ ἐθεράπευον τοὺς θεοὺς;
+```{r}
+check_question(c("ὅτι οἱ θεοὶ τοὺς ἀγροὺς ἐφύλαττον"), options = c("ὅτι οἱ θεοὶ τοὺς ἀγροὺς ἐφύλαττον", "ὅτι οἱ θεοὶ ἐν τῷ οὐρανῷ ἐβιότευον",  "ὅτι τοῖς θεοῖς ἦσαν καλοὶ ναοί", "ὅτι οἱ θεοὶ εὖ μανθάνουσιν"), type = "radio", random_answer_order = TRUE, button_label = "ἐπανορθοῦν",  right = "καλῶς 😊", wrong = "οὐδαμῶς 😕")
+```
+
+</br>
+3. Τίς ἦν ὁ Ἡρακλῆς;
+```{r}
+check_question(c("τοῦ θεοῦ υἱός", "φίλος τῶν γεωργῶν"), options = c("τοῦ θεοῦ υἱός", "φίλος τῶν γεωργῶν", "γεωργός", "ἀοιδός"), type = "checkbox", random_answer_order = TRUE, button_label = "ἐπανορθοῦν",  right = "καλῶς 😊", wrong = "οὐδαμῶς 😕")
+```
+
+</br>
+4. Διὰ τί Ζεὺς ἄγει τὸν υἱὸν εἰς τὸν οὐρανόν;
+```{r}
+check_question(c("ὅτι θαυμάζει τὸν ἀγαθὸν θυμὸν τοῦ υἱοῦ"), options = c("ὅτι θαυμάζει τὸν ἀγαθὸν θυμὸν τοῦ υἱοῦ", "ὅτι ὁ Ἡρακλῆς ἔχει καλὸν ναόν", "ὅτι ὁ Ἡρακλῆς εὖ μανθάνει"), type = "checkbox", random_answer_order = TRUE, button_label = "ἐπανορθοῦν",  right = "καλῶς 😊", wrong = "οὐδαμῶς 😕")
+```
+
+</br>
+
+**Замените предложение с глаголом ἔχω («имею») на конструкцию с _dativus possessivus_ и наоборот**.
 _Пример: Ὁ ἀοιδὸς εἶχε τὸν ἀγρὸν => ὁ ἀγρὸς ἦν τῷ ἀοιδῷ_
-\
-\
-5) ὁ υἱὸς εἴχε* τὸν πατέρα.  
-Ὁ πατὴρ ἦν τῷ __
-```{r}
-check_question(answer = "υἱῷ")
-```
-\
-6) οἱ θεοὶ εἴχον* τοὺς ναούς.   
-Οἱ ναοὶ ἦσαν τοῖς __
-```{r}
-check_question(answer = "θεοῖς")
-```
-\
-7) τοῖς γεωργοῖς ἦν ὁ φίλος.  
-Οἱ γεωργοὶ εἶχον τὸν __
-```{r}
-check_question(answer = "φίλον")
-```
-\
-8) τῷ νεῷ ἦν ἀγαθὸς θυμός.  
-Ὁ νέος εἶχε ἀγαθὸν __
-```{r}
-check_question(answer = "θυμόν")
-```
-\
-*εἴχε(ν) imperfectum ἔχει.    
-*εἴχον imperfectum ἔχουσι(ν)
 
-#### Заполните пробелы, используя слова из списка:
-\
-9) οἱ θεοὶ βιοτεύουσιν __ τῷ οὐρανῷ.
+</br>
+5. ὁ υἱὸς εἴχε^[εἴχε(ν) imperfectum ἔχει.    ] τὸν πατέρα.  
+Ὁ πατὴρ ἦν τῷ ____.
 ```{r}
-check_question(answer = "ἐν", options = c("εἰς", "ἐκ", "ἐξ", "ἐν"), type = "radio", alignment = "horizontal")
+check_question(answer = "υἱῷ", button_label = "ἐπανορθοῦν",  right = "καλῶς 😊", wrong = "οὐδαμῶς 😕")
 ```
-\
-10) ὁ θεὸς ἄγει τοὺς θνητοὺς __ τὸν οὐρανόν.
+
+</br>
+6. οἱ θεοὶ εἴχον^[εἴχον imperfectum ἔχουσι   ] τοὺς ναούς.   
+Οἱ ναοὶ ἦσαν τοῖς  ____.
 ```{r}
-check_question(answer = "εἰς", options = c("εἰς", "ἐκ", "ἐξ", "ἐν"), type = "radio", alignment = "horizontal")
+check_question(answer = "θεοῖς", button_label = "ἐπανορθοῦν",  right = "καλῶς 😊", wrong = "οὐδαμῶς 😕")
 ```
-\
-11) ὁ  Ἡρακλῆς ἔλυε τοὺς γεωργοὺς __ τῶν πολλῶν πόνων.
+
+</br>
+7. τοῖς γεωργοῖς ἦν ὁ φίλος.  
+Οἱ γεωργοὶ εἶχον τὸν  ____.
 ```{r}
-check_question(answer = "ἐκ", options = c("εἰς", "ἐκ", "ἐξ", "ἐν"), type = "radio", alignment = "horizontal")
+check_question(answer = "φίλον", button_label = "ἐπανορθοῦν",  right = "καλῶς 😊", wrong = "οὐδαμῶς 😕")
 ```
-\
-12) ὁ πατὴρ ἄγει τὸν υἱὸν __ ἀγροῦ εἰς τὸν ναόν.
+
+</br>
+8. τῷ νέω ἦν ἀγαθὸς θυμός.  
+Ὁ νέος εἶχε ἀγαθὸν  ____.
 ```{r}
-check_question(answer = "ἐξ", options = c("εἰς", "ἐκ", "ἐξ", "ἐν"), type = "radio", alignment = "horizontal")
+check_question(answer = "θυμόν", button_label = "ἐπανορθοῦν",  right = "καλῶς 😊", wrong = "οὐδαμῶς 😕")
 ```
 
 
-#### Расставьте слова в правильном порядке 
-\
-13)
-```{r}
-check_question(answer = c("Οἱ", "γεωργοὶ", "ἐθεράπευον", "τοὺς", "θεούς"), type = "in_order")
-```
-\
-14)
-```{r}
-check_question(answer = c("Ἡρακλῆς", "ἦν", "φίλος", "τῶν", "γεωργῶν"), type = "in_order")
-```
-\
+</br>
+**Выберите подходящий предлог**.
 
-#### Результат: `r insert_score()` out of 14
-\
-\
+</br>
+9. οἱ θεοὶ βιοτεύουσιν ____ τῷ οὐρανῷ.
+```{r}
+check_question(answer = "ἐν", options = c("εἰς", "ἐκ", "ἐξ", "ἐν"), type = "radio", alignment = "horizontal", button_label = "ἐπανορθοῦν",  right = "καλῶς 😊", wrong = "οὐδαμῶς 😕")
+```
+
+</br>
+10. ὁ θεὸς ἄγει τοὺς θνητοὺς ____ τὸν οὐρανόν.
+```{r}
+check_question(answer = "εἰς", options = c("εἰς", "ἐκ", "ἐξ", "ἐν"), type = "radio", alignment = "horizontal", button_label = "ἐπανορθοῦν",  right = "καλῶς 😊", wrong = "οὐδαμῶς 😕")
+```
+
+</br>
+11. ὁ  Ἡρακλῆς ἔλυε τοὺς γεωργοὺς ____ πολλῶν πόνων.
+```{r}
+check_question(answer = "ἐκ", options = c("εἰς", "ἐκ", "ἐξ", "ἐν"), type = "radio", alignment = "horizontal", button_label = "ἐπανορθοῦν",  right = "καλῶς 😊", wrong = "οὐδαμῶς 😕")
+```
+
+</br>
+12. ὁ πατὴρ ἄγει τὸν υἱὸν ____ ἀγροῦ εἰς τὸν ναόν.
+```{r}
+check_question(answer = "ἐξ", options = c("εἰς", "ἐκ", "ἐξ", "ἐν"), type = "radio", alignment = "horizontal", button_label = "ἐπανορθοῦν", right = "καλῶς 😊", wrong = "οὐδαμῶς 😕")
+```
+
+</br>
+**Замените выделенное существительное на местоимение αὐτός в подходящей форме**. 
+
+</br>
+13. ὁ **τῶν θεῶν** ἀριθμός = ὁ ἀριθμός ____
+```{r}
+check_question(answer = "αὐτῶν", 
+button_label = "ἐπανορθοῦν", 
+right = "καλῶς 😊", 
+wrong = "οὐδαμῶς 😕")
+```
+
+</br>
+14. ὁ θεὸς ἔλυεν **τοὺς γεωργούς** = ὁ θεὸς ἔλυεν ____
+```{r}
+check_question(answer = "αὐτούς", 
+button_label = "ἐπανορθοῦν", 
+right = "καλῶς 😊", 
+wrong = "οὐδαμῶς 😕")
+```
+
+
+</br>
+15. ὁ βίος **τοῦ υἱοῦ** =  ὁ βίος ____
+```{r}
+check_question(answer = "αὐτοῦ", 
+button_label = "ἐπανορθοῦν", 
+right = "καλῶς 😊", 
+wrong = "οὐδαμῶς 😕")
+```
+
+</br>
+16. οἱ γεωργοὶ πιστεύουσι **τῷ θεῷ** =  οἱ γεωργοὶ πιστεύουσι ____
+```{r}
+check_question(answer = "αὐτῷ", 
+button_label = "ἐπανορθοῦν", 
+right = "καλῶς 😊", 
+wrong = "οὐδαμῶς 😕")
+```
