--- a/07-lesson-g.Rmd
+++ b/07-lesson-g.Rmd
@@ -1,191 +1,179 @@
 # Нить Ариадны
 
-***
-### Μελέτημα 1
-
-Выберите верный падеж у выделенных слов: 
-
-Ἡ Ἀριάδνη θαυμάζει ἐπὶ  (1) **ὁ θάνατος**  τοῦ Μινωταύρου καὶ ἥδεται, ὅτι ἐπὶ (2) **ὁ θάνατος** οἱ ἑταῖροι οὐ πέμπονται· σὺν (3) **αὐτοί** εἰς τὸ πλοῖον εἰσβαίνει.
+**Поставьте слова в нужный падеж, сохранив число**.
 
 </br>
+Ἡ Ἀριάδνη θαυμάζει ἐπὶ  (1: **ὁ θάνατος**)  τοῦ Μινωταύρου καὶ ἥδεται, ὅτι ἐπὶ (2: **ὁ θάνατος**) οἱ ἑταῖροι οὐ πέμπονται.
 
-(1):
 ```{r}
-check_question (answer = "τῷ θάνατῳ",
-                options = c("ὁ θάνατος", "τῷ θάνατῳ", "τὸν θάνατον", "τοῦ θανάτου"),
+word1 <- check_question (answer = "τῷ θανάτῳ",
+                options = c("ὁ θάνατος", "τῷ θανάτῳ", "τὸν θάνατον", "τοῦ θανάτου"),
                 right = "κάλλιστα 🍓",
                 wrong = "οὐδαμῶς 😔",
-                button_label = "ἆρα ὀρθῶς λέγω")
-```
+                button_label = "ἆρα ὀρθῶς λέγω;")
 
-</br>
-
-(2):
-```{r}
-check_question (answer = "τὸν θάνατον",
-                options = c("ὁ θάνατος", "τῷ θάνατῳ", "τὸν θάνατον", "τοῦ θανάτου"),
+word2 <- check_question (answer = "τὸν θάνατον",
+                options = c("ὁ θάνατος", "τῷ θανάτῳ", "τὸν θάνατον", "τοῦ θανάτου"),
                 right = "κάλλιστα 🍓",
                 wrong = "οὐδαμῶς 😔",
-                button_label = "ἆρα ὀρθῶς λέγω")
-                
-```
+                button_label = "ἆρα ὀρθῶς λέγω;")
 
-</br>
-
-(3):
-```{r}
-check_question (answer = "αὐτοῖς",
+word3 <- check_question (answer = "αὐτοῖς",
                 options = c("αὐτοί", "αὐτοῖς", "αὐτούς", "αὐτῶν"),
                 right = "κάλλιστα 🍓",
                 wrong = "οὐδαμῶς 😔",
-                button_label = "ἆρα ὀρθῶς λέγω")
-                
+                button_label = "ἆρα ὀρθῶς λέγω;")
 ```
 
-***
-### Μελέτημα 2
+1. `r word1`
+2. `r word2`
 
-Поменяйте число у выделенных слов в предложениях:
+</br>
+Ἡ παρθένος σὺν (3: **αὐτοί**) εἰς τὸ πλοῖον εἰσβαίνει.
 
-**Φυλάττου** τὸ φοβερὸν θηρίον, **μάχου** τοῖς ὅπλοις, ὦ ξένε.
+3. `r word3`
+
+
+</br>
+**Поменяйте число у выделенных слов**.
 
 ```{r}
-check_question (answer = "Φυλάττεσθε, μάχεσθε",
+check_hint("Ответы впишите через запятую и пробел. Прописные и строчные оставляйте как в задании. Следите за ударениями и придыханиями.", hint_title = "_Нажмите здесь для подсказки_.")
+```
+
+</br>
+**Φυλάττου** τὸ φοβερὸν θηρίον, **μάχου** τοῖς ὅπλοις, ὦ **ξένε**.
+
+```{r}
+check_question (answer = "Φυλάττεσθε, μάχεσθε, ξένοι",
+                right = "κάλλιστα 🍓",
+                wrong = "οὐδαμῶς 😔",
+                button_label = "ἆρα ὀρθῶς λέγω;")
+```
+
+</br>
+
+**Εἰσέρχεσθε** σὺν αὐτοῖς, ὦ **ἑταῖροι**, καὶ **πείθεσθε** αὐτοῖς. 
+
+```{r}
+check_question (answer = "Εἰσέρχου, ἑταῖρε, πείθου",
+                right = "κάλλιστα 🍓",
+                wrong = "οὐδαμῶς 😔",
+                button_label = "ἆρα ὀρθῶς λέγω;")
+```
+
+
+</br>
+
+**Поставьте глаголы в скобках в нужные формы имперфекта медиального или пассивного залога**.
+
+Ὁ Θησεὺς ἐκ λαβυρίνθου ἐξέρχεται καὶ τῇ Ἀριάδνῃ διαλέγεται· Μακρὸν χρόνον ἡμεῖς (1: **πιέζομαι**) ὑπὸ τῷ δεινῷ θηρίῳ, ὑμεῖς δὲ (2: **φυλάττομαι**) τὸν Μινώταυρον οὐδὲ ἐφονεύοντο ὑπ᾽ αὐτοῦ. 
+
+```{r}
+word1 <- check_question (answer = "ἐπιεζόμεθα",
+                right = "κάλλιστα 🍓",
+                wrong = "οὐδαμῶς 😔",
+                button_label = "ἆρα ὀρθῶς λέγω;")
+
+word2 <- check_question (answer = "ἐφυλάττεσθε",
+                right = "κάλλιστα 🍓",
+                wrong = "οὐδαμῶς 😔",
+                button_label = "ἆρα ὀρθῶς λέγω;")
+```
+
+1. `r word1`
+2. `r word2`
+
+</br>
+Πολλοὶ νεανισκοὶ ἐπὶ θάνατον (3: **πέμπομαι**), ἐπεὶ Αἰγεὺς τῷ Κρητικῷ τυράννῳ (4: **πείθομαι**). 
+
+```{r}
+word3 <- check_question (answer = "ἐπέμποντο",
+                right = "κάλλιστα 🍓",
+                wrong = "οὐδαμῶς 😔",
+                button_label = "ἆρα ὀρθῶς λέγω")
+
+word4 <- check_question (answer = "ἐπείθετο",
                 right = "κάλλιστα 🍓",
                 wrong = "οὐδαμῶς 😔",
                 button_label = "ἆρα ὀρθῶς λέγω")
 ```
 
+3. `r word3`
+4. `r word4`
+
+
 </br>
 
-**Εἰσέρχεσθε** σὺν αὐτοῖς, ὦ ἑταῖροι, καὶ **πείθεσθε** αὐτοῖς. 
+Νῦν δὲ νεκρός ἐστιν ὁ Μινώταυρος· ἐγὼ μὲν γὰρ (5: **μάχομαι**) τῷ θηρίῳ καὶ ἐφόνευον αὐτόν.
 
 ```{r}
-check_question (answer = "Εἰσέρχου, πείθου",
+word5 <- check_question (answer = "ἐμαχόμην",
                 right = "κάλλιστα 🍓",
                 wrong = "οὐδαμῶς 😔",
-                button_label = "ἆρα ὀρθῶς λέγω")
+                button_label = "ἆρα ὀρθῶς λέγω;")
 ```
+
+5. `r word5`
 
 </br>
 
-Пишите все слова через запятую! 
-
-***
-
-### Μελέτημα 3
-
-Поставьте глаголы в скобках в нужные формы имперфекта медиального или пассивного залога:
-
-Ὁ Θησεὺς ἐκ λαβυρίνθου ἐξέρχεται καὶ τῇ Ἀριάδνῃ διαλέγεται·
-
-«Μακρὸν χρόνον ἡμεῖς **πιέζομαι** ὑπὸ τῷ δεινῷ θηρίῳ, ὑμεῖς δὲ **φυλάττομαι** τὸν Μινώταυρον οὐδὲ ἐφονεύοντο ὑπ᾽ αὐτοῦ. 
+Σὺ δέ, ὦ Ἀριάδνη, (6: **χαρίζομαι**) τοῖς ξένοις· φεύγε οὖν σὺν τοῖς Ἀθηναίοις».
 
 ```{r}
-check_question (answer = "ἐπιεζόμεθα, ἐφυλάττεσθε",
+word6 <- check_question (answer = "ἐχαρίζου",
                 right = "κάλλιστα 🍓",
                 wrong = "οὐδαμῶς 😔",
-                button_label = "ἆρα ὀρθῶς λέγω")
+                button_label = "ἆρα ὀρθῶς λέγω;")
 ```
+
+6. `r word6`
 
 </br>
 
-Πολλοὶ νεανισκοὶ **κελεύομαι** ἐπὶ θάνατον πέμπεσθαι, ἐπεὶ Αἰγεὺς τῷ Κρητικῷ τυράννῳ **πείθομαι**. 
-
-```{r}
-check_question (answer = "ἐκελεύοντο, ἐπείθετο",
-                right = "κάλλιστα 🍓",
-                wrong = "οὐδαμῶς 😔",
-                button_label = "ἆρα ὀρθῶς λέγω")
-```
-
-</br>
-
-Νῦν δὲ νεκρός ἐστιν ὁ Μινώταυρος· ἐγὼ μὲν γὰρ **μάχομαι** τῷ θηρίῳ καὶ ἐφόνευον αὐτόν.
-
-```{r}
-check_question (answer = "ἐμαχόμην",
-                right = "κάλλιστα 🍓",
-                wrong = "οὐδαμῶς 😔",
-                button_label = "ἆρα ὀρθῶς λέγω")
-```
-
-</br>
-
-Σὺ δέ, ὦ Ἀριάδνη, **χαρίζομαι** τοῖς ξένοις· φεύγε οὖν σὺν τοῖς Ἀθηναίοις».
-
-```{r}
-check_question (answer = "ἐχαρίζου",
-                right = "κάλλιστα 🍓",
-                wrong = "οὐδαμῶς 😔",
-                button_label = "ἆρα ὀρθῶς λέγω")
-```
-
-</br>
-
-Пишите все слова через запятую! 
-
-***
-
-### Μελέτημα 4
-
-Что на картинках? Расставьте слова в правильном порядке:
+**Что на картинках (слева направо)? Выберите подходящую подпись.**
 
 
 ![](https://drive.google.com/uc?id=1zoIMtTSVlJyDeQxjfsqiTUiaTulpf7Q-){width="70%"}
 
-α'.
 
 ```{r}
 
-check_question (answer = c("Ὁ", "Θησεὺς", "λαμβάνει", "μακρὸν", "λίνον", "παρὰ", "τῆς", "Ἀριάδνης"),
-                type = "in_order",
-                alignment = "horizontal", 
+pic1 <- check_question (answer = "Ὁ Θησεὺς λαμβάνει λίνον μακρὸν παρὰ τῆς Ἀριάδνης",
+               options = c("Ὁ Θησεὺς λαμβάνει λίνον μακρὸν παρὰ τῆς Ἀριάδνης", "Ὁ Θησεὺς ἐν τῷ λαβυρίνθῳ ἐστίν· ἐθέλει γὰρ τὸν Μινώταυρον φονεύειν", "Ὁ Θησεὺς εὖ µάχεται τῷ Μινωταύρῳ καὶ φονεύει αὐτόν"),
+                type = "select",
                 right = "κάλλιστα 🍓",
                 wrong = "οὐδαμῶς 😔",
-                button_label = "ἆρα ὀρθῶς λέγω")
-```
+                button_label = "ἆρα ὀρθῶς λέγω;",
+                random_answer_order = TRUE)
 
-</br>
 
-β'. 
-
-```{r}
-
-check_question (answer = c("Ὁ", "Θησεὺς", "ἐν", "τῷ", "λαβυρίνθῳ", "ἐστίν·", "ἐθέλει", "γὰρ", "τὸν", "Μινώταυρον", "φονεύειν"),
-                type = "in_order",
-                alignment = "horizontal", 
+pic2 <- check_question (answer = "Ὁ Θησεὺς ἐν τῷ λαβυρίνθῳ ἐστίν· ἐθέλει γὰρ τὸν Μινώταυρον φονεύειν",
+               options = c("Ὁ Θησεὺς λαμβάνει λίνον μακρὸν παρὰ τῆς Ἀριάδνης", "Ὁ Θησεὺς ἐν τῷ λαβυρίνθῳ ἐστίν· ἐθέλει γὰρ τὸν Μινώταυρον φονεύειν", "Ὁ Θησεὺς εὖ µάχεται τῷ Μινωταύρῳ καὶ φονεύει αὐτόν"),
+                type = "select",
                 right = "κάλλιστα 🍓",
                 wrong = "οὐδαμῶς 😔",
-                button_label = "ἆρα ὀρθῶς λέγω")
-```
-
-</br>
-
-γ'. 
+                button_label = "ἆρα ὀρθῶς λέγω;",
+                random_answer_order = TRUE)
 
 
-```{r}
-
-check_question (answer = c("Ὁ", "Θησεὺς", "εὖ", "µάχεται", "τῷ", "Μινωταύρῳ", "καὶ", "φονεύει", "αὐτόν"),
-                type = "in_order",
-                alignment = "horizontal", 
+pic3 <- check_question (answer = "Ὁ Θησεὺς εὖ µάχεται τῷ Μινωταύρῳ καὶ φονεύει αὐτόν",
+               options = c("Ὁ Θησεὺς λαμβάνει λίνον μακρὸν παρὰ τῆς Ἀριάδνης", "Ὁ Θησεὺς ἐν τῷ λαβυρίνθῳ ἐστίν· ἐθέλει γὰρ τὸν Μινώταυρον φονεύειν", "Ὁ Θησεὺς εὖ µάχεται τῷ Μινωταύρῳ καὶ φονεύει αὐτόν"),
+                type = "select",
                 right = "κάλλιστα 🍓",
                 wrong = "οὐδαμῶς 😔",
-                button_label = "ἆρα ὀρθῶς λέγω")
+                button_label = "ἆρα ὀρθῶς λέγω;",
+                random_answer_order = TRUE)
 ```
 
+**Изображение 1**. `r pic1`
 </br>
+**Изображение 2**. `r pic2`
 </br>
+**Изображение 3**. `r pic3`
 
-#### Всего правильных ответов: 
 
-```{r}
-insert_score() 
-```
 
-</br>
-</br>
 
 
 
